--- a/MuchachoStore/templates/base/header.html
+++ b/MuchachoStore/templates/base/header.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-primary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{% url 'indexprincpal' %}" id="titulo">Tienda Muchacho</a>
+            <a class="navbar-brand" href="{% url 'indexPrincipal' %}" id="titulo">Tienda Muchacho</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -12,7 +12,7 @@
                 <ul class="navbar-nav me-auto mb-2-lg-0">
 
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'indexprincpal' %}">Inicio</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'indexPrincipal' %}">Inicio</a>
                     </li>
 
                     <li class="nav-item">
@@ -30,7 +30,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="{% url 'pendrivesec' %}">Pendrives</a></li>
-                            <li><a class="dropdown-item" href="{% url 'parlantesec' %}">Parlantes</a></li>
+                            <li><a class="dropdown-item" href="{% url 'parlantesec'%}">Parlantes</a></li>
                             <li><a class="dropdown-item" href="{% url 'audifonosec' %}">Audifonos</a></li>
                         </ul>
 
